# graphql-tools-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: parser.rs
src/parser/: mod.rs
src/parser/query/: minify.rs  mod.rs
src/validation/rules/: overlapping_fields_can_be_merged.rs
