[package]
name = "graphql-tools"
version = "0.4.0"
edition = "2021"
description = "Tools for working with GraphQL in Rust"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["graphql", "tools", "gql", "validation", "ast"]
homepage = "https://github.com/dotansimha/graphql-tools-rs"
documentation = "https://github.com/dotansimha/graphql-tools-rs"
authors = ["Dotan Simha <dotansimha@gmail.com>"]

[[bench]]
name = "parser"
harness = false

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0.0"
combine = "4.6.6"
thiserror = "2.0.14"
itoa = "1.0.17"
ryu = "1.0.22"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
pretty_assertions = "0.5.0"
insta = { version = "1.42.1" }
